reset category structure
